Formatting for code blocks and main title

--- a/post.html
+++ b/post.html
@@ -9,9 +9,25 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Big O Notation - Python Examples</h1>
-    <p>
-        text here
-    </p>
+    <div id="heading" class="heading">
+        <h1>Big O Notation - Python Examples</h1>
+        <h3>Rachel Curry</h3>
+        <p>tags here</p>
+    </div>
+    <div id="intro-section" class="main-text">
+        <p>This is a paragraph about the thing. This will be actual
+            words at some point, but right now i'm just trying to 
+            figure this whole thing out. 
+        </p>
+    </div>
+    <div id="tictactoe-section" class="main-text">
+        <h2>First section</h2>
+        <p>This will be the first section. I will talk about the tic tac toe number of game states.</p>
+        <pre><code>def addup(num):
+        sum = 0
+        for i in range(num):
+            sum +=1
+        return sum</code></pre>
+    </div>
 </body>
 </html>
