--- a/post.html
+++ b/post.html
@@ -1,4 +1,4 @@
-<!--blog post: Big O Notation-->
+<!--blog post: Big O Notation - Python Examples-->
 <!--Rachel Curry-->
 <!--March 6th, 2025-->
 
@@ -15,19 +15,34 @@
         <p>tags here</p>
     </div>
     <div id="intro-section" class="main-text">
-        <p>This is a paragraph about the thing. This will be actual
-            words at some point, but right now i'm just trying to 
-            figure this whole thing out. 
+        <p>
+            In computer science, the <strong>Big O Notation</strong> is a mathematical format to express the computational complexity of
+            an algorithm. This allows us to determine the <em>time</em> and <em>space</em> that an algorithm will need as its input changes. 
+        </p>
+        <p>
+            This article will cover some examples of Big O Notation in Python, including the Big O calculations of a single <code>for</code> loop,
+            a nested <code>for</code> loop, and the built-in <code>map</code> iterator. We will also calculate the time complexity of
+            the <strong>Minimax Algorithm</strong>, which can be used in many backtracking problems (such as Tic Tac Toe). At the end, there is 
+            a bonus section that mathematically explains how many game states are possible on a 3x3 Tic Tac Toe board.
         </p>
     </div>
-    <div id="tictactoe-section" class="main-text">
-        <h2>First section</h2>
-        <p>This will be the first section. I will talk about the tic tac toe number of game states.</p>
+    <div id="big-o-examples" class="main-text">
+        <h2>Big O Python Examples</h2>
+        <h3>Singular <code>for</code> Loop</h3>
+        <p>some text here</p>
         <pre><code>def addup(num):
         sum = 0
         for i in range(num):
             sum +=1
         return sum</code></pre>
+    </div>
+    <div id="minimax-section" class="main-text">
+        <h2>Minimax Algorithm</h2>
+        <p>Some info here</p>
+    </div>
+    <div id="tictactoe-section" class="main-text">
+        <h2>Tic Tac Toe Game States</h2>
+        <p>This will be the first section. I will talk about the tic tac toe number of game states.</p>
     </div>
 </body>
 </html>
