switched structure a bit to combine ttt and minimax sections

--- a/post.html
+++ b/post.html
@@ -24,8 +24,8 @@
         <p>
             This article will cover how the Big O Notation works, including some examples in Python: a single <code>for</code> loop,
             a nested <code>for</code> loop, and the built-in <code>map</code> iterator. We will also calculate the time complexity of
-            the <strong>Minimax Algorithm</strong>, which can be used in many backtracking problems (such as Tic Tac Toe). At the end, there is 
-            a bonus section that mathematically explains how many game states are possible on a 3x3 Tic Tac Toe board.
+            the <strong>Minimax Algorithm</strong>, which can be used in many backtracking problems (such as Tic Tac Toe). Within the Minimax-Tic Tac
+            Toe analysis, we will mathematically compute how many game states are possible on a 3x3 Tic Tac Toe board.
         </p>
     </div>
     <div id="big-o-explained" class="main-text">
@@ -171,7 +171,12 @@
     </div>
     <div id="minimax-section" class="main-text">
         <h2>Minimax Algorithm</h2>
-        <p>Some info here</p>
+        <p>The Minimax Algorithm is an algorithm commonly used in game logic, backtracking, and decision making programs. This algorithm uses the tree structure to "see" all possible
+            outcomes of a situation and make the optimal choice based on the depth of the scenario in the tree. 
+        </p>
+        <p>
+            For example, consider the game of Tic Tac Toe. On a 3x3 board, there are 
+        </p>
     </div>
     <div id="tictactoe-section" class="main-text">
         <h2>Tic Tac Toe Game States</h2>
