added signature setup

--- a/post.html
+++ b/post.html
@@ -7,6 +7,9 @@
 <head>
     <title>Blog: Big O Notation</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
 </head>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
 <script src="graph.js"></script>
@@ -175,12 +178,14 @@
             outcomes of a situation and make the optimal choice based on the depth of the scenario in the tree. 
         </p>
         <p>
-            For example, consider the game of Tic Tac Toe. On a 3x3 board, there are 
+            For example, consider the game of Tic Tac Toe. On a 3x3 board, how many possible solutions are there? To discover this, first we might think
+            that it is a simple 
         </p>
     </div>
-    <div id="tictactoe-section" class="main-text">
-        <h2>Tic Tac Toe Game States</h2>
-        <p>This will be the first section. I will talk about the tic tac toe number of game states.</p>
+    <div id="conclusion" class="main-text">
+        <h2>Conclusion (change this word ew)</h2>
+        <p>bleh</p>
+        <p class="signature">Rachel Curry</p>
     </div>
 </body>
 </html>
