more minimax text and tag styling

--- a/post.html
+++ b/post.html
@@ -17,7 +17,8 @@
     <div id="heading" class="heading">
         <h1>Big O Notation — Python Examples</h1>
         <h3>Rachel Curry</h3>
-        <p>tags here</p>
+        <h4>March 7th, 2025</h4>
+        <p><span class="tag">algorithms</span> <span class="tag">big o notation</span> <span class="tag">minimax</span></p>
     </div>
     <div id="intro-section" class="main-text">
         <p>
@@ -178,8 +179,9 @@
             outcomes of a situation and make the optimal choice based on the depth of the scenario in the tree. 
         </p>
         <p>
-            For example, consider the game of Tic Tac Toe. On a 3x3 board, how many possible solutions are there? To discover this, first we might think
-            that it is a simple 
+            For example, consider the game of Tic Tac Toe. On a 3x3 board, how many possible game states are there? To discover this, first let's define what a game state is more
+            specifically. In this context, a <strong>game state</strong> refers to one possible game scenario. This includes all possible situations where the game is either finished or unfinished. 
+            For example, below are three different game states:
         </p>
     </div>
     <div id="conclusion" class="main-text">
